Fix Grid PDF icon misalignment. Closes telerik/kendo-ui-core#2215

--- a/styles/web/common/editor.less
+++ b/styles/web/common/editor.less
@@ -200,7 +200,7 @@ table.k-editor
 .k-deleteRow, .k-i-delete-row { .editor-icon(-192px, -120px); }
 .k-deleteColumn, .k-i-delete-column { .editor-icon(-192px, -144px); }
 .k-mergeCells, .k-i-merge-cells { .editor-icon(-192px, -168px); }
-.k-pdf, .k-i-pdf, .k-tool .k-i-pdf, .k-tool-group .k-tool .k-i-pdf { .editor-icon(-288px, -240px);}
+.k-pdf, .k-tool-icon .k-i-pdf, .k-tool .k-i-pdf, .k-tool-group .k-tool .k-i-pdf { .editor-icon(-288px, -240px);}
 .k-print, .k-i-print { .editor-icon(-288px, -264px); }
 .k-i-table-wizard, .k-i-table-wizard-insert { .editor-icon(-192px, -192px); }
 
